# frozone

./: CHANGELOG.md  Cargo.toml  INTERNAL_README.md  README.md  RELEASE.md
.github/workflows/: release.yml  rust.yml
frozone/: Cargo.toml
frozone-derive/: Cargo.toml  README.md
frozone-derive/src/: lib.rs
frozone/src/: lib.rs  types.rs
frozone/src/types/: alloc.rs  core.rs  intrisics.rs  primitive.rs  std.rs
frozone/tests/: main.rs
