[package]
name = "frozone-derive"
version = "0.2.0"
edition = "2024"
authors = ["Michael Bleuez <michael.bleuez2@gmail.com>"]
description = "proc-macro for frozone"
rust-version = "1.85"
readme = "README.md"
license = "MIT"
repository = "https://github.com/michaelb/frozone"

[lib]
proc-macro = true

[features]
default = ["std"]
std = []

[dependencies]
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = ["full", "clone-impls", "derive", "parsing", "printing", "proc-macro"] }
