[package]
name = "frozone"
version = "0.2.0"
edition = "2024"
authors = ["Michael Bleuez <michael.bleuez2@gmail.com>"]
description = "Freeze structs and enums in time"
rust-version = "1.85"
readme = "README.md"
license = "MIT"
repository = "https://github.com/michaelb/frozone"

[features]
default = ["std"]
std = ["alloc", "frozone-derive/std"]
alloc = []

[dependencies]
frozone-derive = { path = "../frozone-derive", version = "0.2.0", default-features=false}

[dev-dependencies]
static_assertions = "1.1.0"
